--- a/content/resources/15-310s03-th.md
+++ b/content/resources/15-310s03-th.md
@@ -1,13 +1,15 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-310-managerial-psychology-laboratory-spring-2003/ef85374918e6a7deb923c3ca2f3a35b0_15-310s03-th.jpg
+file: /media/courses/15-310-managerial-psychology-laboratory-spring-2003/ef85374918e6a7deb923c3ca2f3a35b0_15-310s03-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Three cognitive stages in answering questions. (Image by Prof. Dan Ariely.)
   credit: ''
   image-alt: A diagram showing a linear progression from 'interpret question' to 'retrive
     information and form judgement' to 'map judgement onto response scale'.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 15-310s03-th.jpg
 uid: ef853749-18e6-a7de-b923-c3ca2f3a35b0
