--- a/content/resources/15-310s03-th.md
+++ b/content/resources/15-310s03-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/courses/15-310-managerial-psychology-laboratory-spring-2003/ef85374918e6a7deb923c3ca2f3a35b0_15-310s03-th.jpg
+file: /courses/15-310-managerial-psychology-laboratory-spring-2003/ef85374918e6a7deb923c3ca2f3a35b0_15-310s03-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Three cognitive stages in answering questions. (Image by Prof. Dan Ariely.)
@@ -14,3 +14,5 @@ resourcetype: Image
 title: 15-310s03-th.jpg
 uid: ef853749-18e6-a7de-b923-c3ca2f3a35b0
 ---
+New image Upload
+
