--- a/content/resources/15-310s03-th.md
+++ b/content/resources/15-310s03-th.md
@@ -9,10 +9,10 @@ image_metadata:
   image-alt: A diagram showing a linear progression from 'interpret question' to 'retrive
     information and form judgement' to 'map judgement onto response scale'.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 15-310s03-th.jpg
 uid: ef853749-18e6-a7de-b923-c3ca2f3a35b0
 ---
 New image Upload
-
