--- a/content/resources/15-310s03.md
+++ b/content/resources/15-310s03.md
@@ -9,6 +9,7 @@ image_metadata:
   image-alt: A diagram showing a linear progression from 'interpret question' to 'retrive
     information and form judgement' to 'map judgement onto response scale'.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 15-310s03.jpg
