--- a/content/resources/15-310s03.md
+++ b/content/resources/15-310s03.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/15-310-managerial-psychology-laboratory-spring-2003/e06bd15759eae6b9f6a84d108ed2eb79_15-310s03.jpg
+file_size: 14681
 file_type: image/jpeg
 image_metadata:
   caption: Three cognitive stages in answering questions. (Image by Prof. Dan Ariely.)
